Fix QA some more